public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2000/source/compile
source.c: In function ‘main’:
source.c:12:5: error: expected ‘;’ before ‘for’
     for(p<=X)
     ^
